Add strings for layout
Change-Id: I9b55722e61350a0b1b3ad545abb67c67d2258a45

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -1,5 +1,16 @@
 ---
 en:
+  menu:
+    title: "Wikimedia Foundation Transparency Report"
+    privacy: "User Data"
+    content: "Content"
+    faq: "FAQ"
+    privacy_policy: "Privacy Policy"
+    data_retention_guidelines: "Data Retention Guidelines"
+    tou: "Terms of Use"
+    about_us: "About Us"
+    blog: "Blog"
+
   home:
     title: "Wikimedia Foundation"
     title_two: "Transparency<br> Report"
