Fixes to the user data page
Change-Id: If351a815702aa721074a8232abb853dbc46963dd

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -35,8 +35,8 @@ en:
     quote: "Man is least himself when he talks in his own person. Give him a mask, and he will tell you the truth."
     cite: "Oscar Wilde <small>Writer &amp; Poet (1891)</small>"
     summary: "Summary"
-    compared_to_others: "Compared to other companies, we received relatively few requests."
-    request_response: "Requests for User Data, and How We Responded."
+    compared_to_others: "Compared to other companies, we received relatively few requests"
+    request_response: "Requests for user data, and how we responded"
     information_produced: "Information Produced"
     informal_non_govt: "Informal Non-Government Requests"
     informal_govt: "Informal Government Requests"
