--- a/locales/en.yml
+++ b/locales/en.yml
@@ -10,6 +10,7 @@ en:
     privacy: "User Data"
     content: "Content"
     faq: "FAQ"
+    download_data: "Download Data"
     privacy_policy: "Privacy Policy"
     data_retention_guidelines: "Data Retention Guidelines"
     tou: "Terms of Use"
