--- a/locales/en.yml
+++ b/locales/en.yml
@@ -59,6 +59,7 @@ en:
     title: "Requests for Content<br>Alteration &amp; Takedown"
     total_number_of_requests: "Total Number of Requests"
     percentage_of_requests_granted: "Percentage of Requests Granted"
+    total_number_of_dmca_requests: "Total Number of DMCA Takedown Requests"
     lead: "<h2>Imagine a world in which <span class='blackout'>every single human being can freely share in the sum of all knowledge.</span></h2>"
     intro: "<p>The Wikimedia projects make up one of the world's largest repositories of human knowledge. With that much information, someone is bound to get upset by some of the content from time to time. While the vast majority of content disputes are <a href='/faq.html#resolve_content_disputes'>resolved by users</a> themselves, in some extreme cases the Wikimedia Foundation may receive a legal demand to override our users.</p><p>The Wikimedia projects are yours, not ours. People just like you from around the world write, upload, edit, and curate all of the content. Therefore, we believe users should decide what belongs on Wikimedia projects whenever legally possible.</p><p>Below, you will find more information about the number of requests we receive, where they come from, and how they could impact free knowledge. You can also learn more about how we fight for freedom of speech through our user assistance programs in the <a href='/faq.html#im_being_sued'>FAQ</a>.</p>"
     quote: "We change people through conversation, not through censorship."
