Add the new FAQ for the bubble graph
Change-Id: Ic58372f18567615be87f33d8d040dc29382f6db3

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -50,7 +50,7 @@ en:
     user_actually_affected: "User Accounts Actually Affected"
     total_requests: "Total requests"
     information_was_produced: "Requests where information was produced"
-    bubble_graph_fineprint: "Figures for Wikimedia include additional types of requests for user data that are not included in the other organizations' figures. See the FAQ for more details."
+    bubble_graph_fineprint: "Figures for Wikimedia include additional types of requests for user data that are not included in the other organizations' figures. See the <a href='/faq.html#different_compare'>FAQ</a> for more details."
     show_all: "Show All"
     request_type: "Request Type"
     information_produced_title: "Information Produced?"
@@ -117,6 +117,8 @@ en:
     a_potentially_affected: "<p>This number represents the number of unique user accounts implicated by requests for user data and whose data would have been disclosed if we have granted every request we received. This number may not reflect the number of unique individuals implicated by requests for user data; if an individual has multiple accounts across all Wikimedia projects, and we receive requests for more than one of these accounts, we record each user account separately. As a result, this number might overestimate the number of individuals implicated by user data requests.</p>"
     q_actually_affected: "What do you mean by user accounts actually affected?"
     a_actually_affected: "<p>This number represents the number of unique user accounts whose nonpublic information was disclosed as a result of WMF receiving a valid request for user data. This number may not reflect the number of unique individuals whose data was disclosed as a result of a valid request for user data; if an individual has multiple accounts across all Wikimedia projects, and we receive requests for more than one of these accounts, we record each user account separately. As a result, this number might overestimate the number of individuals implicated by user data requests.</p>"
+    q_different_compare: "Why are requests for user data calculated differently by WMF as compared to other organizations?"
+    a_different_compare: "In this transparency report, WMF has included all types of requests for user information it receives, including governmental and non-governmental requests as well as informal and formal requests. Other organizations, particularly those appearing in the 'Compared to other companies' graph in our report, only disclose requests originating from governments. Please visit the transparency reports of <a href='https://govtrequests.facebook.com/'>Facebook</a>, <a href='http://www.google.com/transparencyreport/'>Google</a>, <a href='https://transparency.twitter.com/'>Twitter</a>, and <a href='https://www.linkedin.com/legal/transparency'>LinkedIn</a> for more detail about the types of requests they receive."
     q_public_information_included: "Are requests for public information included in requests for user data?"
     a_public_information_included: "<p>No, any requests for purely publicly available information are not included in this report.</p>"
     q_improve_laws: "What is WMF doing to help improve laws related to disclosure or surveillance of user information?"
