Added links in the footer for Wiki Version of the report
Change-Id: I02bb3df0106804c63205ffca1a6405b33b0926db

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -16,6 +16,7 @@ en:
     tou: "Terms of Use"
     about_us: "About Us"
     blog: "Blog"
+    wiki_version: "Wiki Version"
 
   home:
     title: "Wikimedia Foundation"
