--- a/locales/en.yml
+++ b/locales/en.yml
@@ -23,7 +23,7 @@ en:
     title_two: "Transparency<br> Report"
     lead: "<a target='_blank' href='http://wikimediafoundation.org/wiki/Vision'>Our mission</a> is to provide free access to the sum of all human knowledge. We believe that protecting user privacy and defending against censorship are essential to the success of that mission. Every year, we receive requests from governments, individuals, and organizations to disclose information about our users or to delete or alter content on our projects. Some are legitimate. Some are not.<br /> <br />The purpose of this transparency report is to shed light on the requests we receive and how we respond to them."
     privacy: "Requests for <br/>User Data"
-    content: "Requests for Content &amp; Takedown"
+    content: "Requests for Content Alteration &amp; Takedown"
     faq: "Frequently Asked<br/>Questions"
     quote: "Sunlight is said to be the best of disinfectants."
     cite: "<a href='https://en.wikipedia.org/wiki/Louis_Brandeis'>Louis Brandeis</a><small>Former <a href='https://en.wikipedia.org/wiki/Associate_Justice_of_the_Supreme_Court_of_the_United_States'>Associate Justice</a> of the <br /><a href='https://en.wikipedia.org/wiki/Supreme_Court_of_the_United_States'>Supreme Court of the United States</a> (<a href='https://en.wikiquote.org/wiki/Louis_Brandeis'>1914</a>)</small>"
