correct typographical errors in privacy.html
The Transparency Report currently contains typographical errors.
This commit fixes two of them.

Change-Id: I140e50aac5b9a82002c640e17b265849d44d2525

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -43,11 +43,11 @@ en:
     informal_non_govt: "Informal Non-Government Requests"
     informal_govt: "Informal Government Requests"
     civil_subpoenas: "Civil Subpoenas"
-    criminal_subpoenas: "Criminal Subopenas"
+    criminal_subpoenas: "Criminal Subpoenas"
     administrative_subpoenas: "Administrative Subpoenas"
     search_warrants: "Search Warrants"
     court_orders: "Court Orders"
-    user_potentially_affected: "User Accounts Pottentially Affected"
+    user_potentially_affected: "User Accounts Potentially Affected"
     user_actually_affected: "User Accounts Actually Affected"
     total_requests: "Total requests"
     information_was_produced: "Requests where information was produced"
