Translations for string in JS
Change-Id: I60ac57b2279abba2e1a5f8d893efe512d4d36b2b

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -50,6 +50,7 @@ en:
     user_potentially_affected: "User Accounts Potentially Affected"
     user_actually_affected: "User Accounts Actually Affected"
     total_requests: "Total requests"
+    information_produced: "Information produced"
     information_was_produced: "Requests where information was produced"
     bubble_graph_fineprint: "Figures for Wikimedia include additional types of requests for user data that are not included in the other organizations' figures. See the <a href='/faq.html#different_compare'>FAQ</a> for more details."
     show_all: "Show All"
@@ -144,6 +145,86 @@ en:
     a_targeted_takedown: "<p>It means that a particular project would have been altered if we had granted a particular request or that a particular project was actually altered due to a particular request. For example, if the transparency report indicates that French Wiktionary was targeted by one content alteration request, it means that we received a content alteration request that demanded that we change content on French Wiktionary.</p>"
     q_projects_affected: "Do you have data for projects potentially and actually affected from July 2012 to June 2013?"
     a_projects_affected: "<p>No, we started tracking requests in more detail beginning in July 2013, so this level of detail is not available for July 2012 to June 2013.</p>"
+
+  graph:
+    usa: "United States"
+    united_kingdom: "United Kingdom"
+    france: "France"
+    italy: "Italy"
+    germany: "Germany"
+    india: "India"
+    singapore: "Singapore"
+    new_zealand: "New Zealand"
+    malaysia: "Malaysia"
+    canada: "Canada"
+    hong_kong: "Hong Kong"
+    mexico: "Mexico"
+    netherlands: "Netherlands"
+    slovakia: "Slovakia"
+    brazil: "Brazil"
+    spain: "Spain"
+    switzerland: "Switzerland"
+    australia: "Australia"
+    russia: "Russia"
+    belgium: "Belgium"
+    austria: "Austria"
+    chile: "Chile"
+    iran: "Iran"
+    israel: "Israel"
+    luxembourg: "Luxembourg"
+    poland: "Poland"
+    serbia: "Serbia"
+    ireland: "Ireland"
+    pakistan: "Pakistan"
+    senegal: "Senegal"
+    latvia: "Latvia"
+    argentina: "Argentina"
+    bulgaria: "Bulgaria"
+    denmark: "Denmark"
+    south_korea: "South Korea"
+    norway: "Norway"
+    slovenia: "Slovenia"
+    peru: "Peru"
+    bangladesh: "Bangladesh"
+
+    english_wikipedia: "English Wikipedia"
+    wikimedia_commons: "Wikimedia Commons"
+    german_wikipedia: "German Wikipedia"
+    french_wikipedia: "French Wikipedia"
+    spanish_wikipedia: "Spanish Wikipedia"
+    italian_wikipedia: "Italian Wikipedia"
+    portuguese_wikipedia: "Portuguese Wikipedia"
+    bulgarian_wikipedia: "Bulgarian Wikipedia"
+    arabic_wikipedia: "Arabic Wikipedia"
+    japanese_wikipedia: "Japanese Wikipedia"
+    dutch_wikipedia: "Dutch Wikipedia"
+    norwegian_wikipedia: "Norwegian Wikipedia"
+    polish_wikipedia: "Polish Wikipedia"
+    chinese_wikipedia: "Chinese Wikipedia"
+    english_wikisource: "English Wikisource"
+    french_wikisource: "French Wikisource"
+    ukrainian_wikipedia: "Ukranian Wikipedia"
+    french_wikivoyage: "French Wikivoyage"
+    french_wikitionary: "French Wikitionary"
+    russian_wikipedia: "Russian Wikipedia"
+    slovenian_wikipedia: "Slovenian Wikipedia"
+    no_project_named: "No Project Named"
+
+    one_case_was_american_brazilian: "One case was American-Brazillian"
+    one_case_was_british_swiss: "One case was British-Swiss"
+    one_case_was_french_saudi_arabian: "One case was French-Saudi Arabian"
+    one_case_was_russian_british: "One case was Russian-British"
+    one_case_was_spanish_italian: "One case was Spanish-Italian"
+    one_case_was_serbo_croat: "One case was Serbo-Croat"
+
+
+    unknown: "Unknown"
+    criminal_subpoenas: "Criminal Subpoenas"
+    informal_non_government_requests: "Informal Non-Government Requests"
+    civil_subpoenas: "Civil Subpoenas"
+    informal_government_requests: "Informal Government Requests"
+
+    request_granted: "Request granted"
 
   dates:
     all: "All"
