--- a/locales/en.yml
+++ b/locales/en.yml
@@ -25,8 +25,8 @@ en:
     privacy: "Requests for <br/>User Data"
     content: "Requests for Content Alteration &amp; Takedown"
     faq: "Frequently Asked<br/>Questions"
-    quote: "Sunlight is said to be the best of disinfectants."
-    cite: "<a href='//en.wikipedia.org/wiki/Louis_Brandeis'>Louis Brandeis</a><small>Former <a href='//en.wikipedia.org/wiki/Associate_Justice_of_the_Supreme_Court_of_the_United_States'>Associate Justice</a> of the <br /><a href='//en.wikipedia.org/wiki/Supreme_Court_of_the_United_States'>Supreme Court of the United States</a> (<a href='//en.wikiquote.org/wiki/Louis_Brandeis'>1914</a>)</small>"
+    quote: "I have realized that mystery is what keeps people away, and I’ve grown tired of smoke and mirrors. I yearn for the clean, well-lighted place."
+    cite: "<a href='//en.wikipedia.org/wiki/Amy_Poehler'>Amy Poehler</a>"
 
   privacy:
     title: "Requests for<br/>User Data"
