--- a/locales/en.yml
+++ b/locales/en.yml
@@ -56,7 +56,7 @@ en:
     total_requests: "Total requests"
     information_produced: "Information produced"
     information_was_produced: "Requests where information was produced"
-    bubble_graph_fineprint: "Figures for Wikimedia include additional types of requests for user data that are not included in the other organizations' figures. See the <a href='/faq.html#different_compare'>FAQ</a> for more details."
+    bubble_graph_fineprint: "Due to the inconsistent release dates across different organizations, comparison data for the period covered by this report (July 2014 - December 2014) was not available, so we are presenting the comparison data above for July 2013 - June 2014. Please also note that figures for Wikimedia include additional types of requests for user data that are not included in the other organizations' figures. See the <a href='/faq.html#different_compare'>FAQ</a> for more details."
     show_all: "Show All"
     request_type: "Request Type"
     information_produced_title: "Information Produced?"
