content:where_from: Add new data - Update locales - Update tabs - Update flags
Change-Id: I7409882869de4268952b46c5ab8007c4cf798a16

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -227,6 +227,15 @@ en:
     slovenia: "Slovenia"
     peru: "Peru"
     bangladesh: "Bangladesh"
+    china: "China"
+    czech_republic: "Czech Republic"
+    ukraine: "Ukraine"
+    greece: "Greece"
+    japan: "Japan"
+    sri_lanka: "Sri Lanka"
+    sweden: "Sweden"
+    turkey: "Turkey"
+    cyprus: "Cyprus"
 
     english_wikipedia: "English Wikipedia"
     wikimedia_commons: "Wikimedia Commons"
