content:targeted_takedown: Update data - Update locale - Update data - Update tabs
Change-Id: I23b3f0df3e4014e7aec10bafcfc0ba5ba67a1885

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -259,6 +259,15 @@ en:
     russian_wikipedia: "Russian Wikipedia"
     slovenian_wikipedia: "Slovenian Wikipedia"
     no_project_named: "No Project Named"
+    multiple: "Multiple"
+    not_a_wmf_site: "Not a WMF site"
+    korean_wikipedia: "Korean Wikipedia"
+    turkish_wikipedia: "Turkish Wikipedia"
+    hebrew_wikipedia: "Hebrew Wikipedia"
+    slovak_wikipedia: "Slovak Wikipedia"
+    korean_wikinews: "Korean Wikinews"
+    english_wikinews: "English Wikinews"
+    serbian_wikipedia: "Serbian Wikipedia"
 
     one_case_was_american_brazilian: "One case was American-Brazillian"
     one_case_was_british_swiss: "One case was British-Swiss"
