index: Complete Amy Poehler quote attribution
Change-Id: I6f5fa882bcdf996079d49c568264c4c680f920a5

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -27,7 +27,7 @@ en:
     content: "Requests for Content Alteration &amp; Takedown"
     faq: "Frequently Asked<br/>Questions"
     quote: "I have realized that mystery is what keeps people away, and I’ve grown tired of smoke and mirrors. I yearn for the clean, well-lighted place."
-    cite: "<a href='//en.wikipedia.org/wiki/Amy_Poehler'>Amy Poehler</a>"
+    cite: "<a href='//en.wikipedia.org/wiki/Amy_Poehler'>Amy Poehler</a><small>Actress & Author (<a href='//en.wikiquote.org/wiki/Amy_Poehler'>2014</a>)</small>"
 
   stories:
     title: "Stories"
