privacy: Add hidden input for the locale item - request_granted
Change-Id: I52eae3460fac9429baac32686c2c8b6725fffde4

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -298,7 +298,7 @@ While Wikimedia’s projects are not search engines, we occasionally receive req
     municipal_government: "Municipal Government"
     doj: "DOJ"
 
-    request_granted: "Request granted"
+    request_granted: "Requests granted"
 
     physical_threats: "Physical threats"
     suicide_threats: "Suicide threats"
