--- a/locales/en.yml
+++ b/locales/en.yml
@@ -41,6 +41,7 @@ en:
     quote: "The best weapon of a dictatorship is secrecy, but the best weapon of a democracy should be the weapon of openness."
     cite: "<a href='//en.wikipedia.org/wiki/Niels_Bohr'>Niels Bohr</a><small>Physics Nobel Prize Laureate</small>"
     summary: "Summary"
+    govt_requests: "Government Requests"
     compared_to_others: "Compared to other companies, we received relatively few requests"
     request_response: "Requests for user data, and how we responded"
     information_produced: "Number of Times Information Produced"
@@ -290,9 +291,10 @@ While Wikimedia’s projects are not search engines, we occasionally receive req
     informal_non_government_requests: "Informal Non-Government Requests"
     civil_subpoenas: "Civil Subpoenas"
     informal_government_requests: "Informal Government Requests"
-    warrant: "Warrant"
+    warrant: "Warrants"
 
     local_police: "Local Police"
+    federal_agency: "Federal Agency"
     federal_police: "Federal Police"
     executive_office: "Executive Office"
     municipal_government: "Municipal Government"
