content: Add summary table for takedown requests
Change-Id: I11540ee80403df0b1238ad1d32bb2ad640e5c536

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -299,6 +299,9 @@ While Wikimedia’s projects are not search engines, we occasionally receive req
     executive_office: "Executive Office"
     municipal_government: "Municipal Government"
     doj: "DOJ"
+    uknmd: "U.K. Non-Ministerial Department"
+    politicians_candidates: "Politicians & Candidates"
+    ministry: "Ministry"
 
     request_granted: "Requests granted"
 
