privacy: Change the title of the govt_requests summary table
Change-Id: I6cdb351968fd0e066348619dfa880e9f48b7cedf

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -41,7 +41,7 @@ en:
     quote: "The best weapon of a dictatorship is secrecy, but the best weapon of a democracy should be the weapon of openness."
     cite: "<a href='//en.wikipedia.org/wiki/Niels_Bohr'>Niels Bohr</a><small>Physics Nobel Prize Laureate</small>"
     summary: "Summary"
-    govt_requests: "Government Requests"
+    govt_requests: "Government requests breakdown"
     compared_to_others: "Compared to other companies, we received relatively few requests"
     request_response: "Requests for user data, and how we responded"
     information_produced: "Number of Times Information Produced"
