Add DMCA by project data
Change-Id: Ib9a46fe17bafdd030e951211f17c4a89d910dadc

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -290,6 +290,7 @@ While Wikimedia Projects are not search engines, we occasionally receive request
     not_a_wmf_site: "Not a WMF site"
     korean_wikipedia: "Korean Wikipedia"
     turkish_wikipedia: "Turkish Wikipedia"
+    tagalog_wikipedia: "Tagalog Wikipedia"
     hebrew_wikipedia: "Hebrew Wikipedia"
     slovak_wikipedia: "Slovak Wikipedia"
     korean_wikinews: "Korean Wikinews"
