Add takedown by project
Change-Id: I3ef4aa161f2908167e8b7ae2eb4cfea523dc138e

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -287,6 +287,7 @@ While Wikimedia Projects are not search engines, we occasionally receive request
     slovenian_wikipedia: "Slovenian Wikipedia"
     no_project_named: "No Project Named"
     multiple: "Multiple"
+    multiple_projects: "Multiple Projects"
     not_a_wmf_site: "Not a WMF site"
     korean_wikipedia: "Korean Wikipedia"
     turkish_wikipedia: "Turkish Wikipedia"
@@ -296,6 +297,16 @@ While Wikimedia Projects are not search engines, we occasionally receive request
     korean_wikinews: "Korean Wikinews"
     english_wikinews: "English Wikinews"
     serbian_wikipedia: "Serbian Wikipedia"
+    russian_wikisource: "Russian Wikisource"
+    czech_wikipedia: "Czech Wikipedia"
+    catalan_wikipedia: "Catalan Wikipedia"
+    english_wikispecies: "English Wikispecies"
+    swedish_wikipedia: "Swedish Wikipedia"
+    romanian_wikipedia: "Romanian Wikipedia"
+    somali_wikipedia: "Somali Wikipedia"
+    danish_wikiquote: "Danish Wikiquote"
+    french_wiktionary: "French Wiktionary"
+    english_wiktionary: "English Wiktionary"
 
     one_case_was_american_brazilian: "One case was American-Brazillian"
     one_case_was_british_swiss: "One case was British-Swiss"
