Move and add columns in sum.csv
 * “Informal Government requests should be relabeled to “Court Orders”
 * “Warrants” should be relabeled to “Informal Government Requests”

Change-Id: I7d4cff989efbda9aadf0129904ec3a0857836c30

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -326,6 +326,7 @@ While Wikimedia projects are not search engines, we occasionally receive request
     civil_subpoenas: "Civil Subpoenas"
     informal_government_requests: "Informal Government Requests"
     warrant: "Warrants"
+    court_orders: "Court orders"
     court_order: "Court order"
 
     local_police: "Local Police"
