Rename South Korea to Republic of Korea
Change-Id: I0f5459d5e34cf09dd7b75a6b60c2929ab9ad88ca

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -271,7 +271,7 @@ While Wikimedia projects are not search engines, we occasionally receive request
     argentina: "Argentina"
     bulgaria: "Bulgaria"
     denmark: "Denmark"
-    south_korea: "South Korea"
+    south_korea: "Republic of Korea"
     norway: "Norway"
     slovenia: "Slovenia"
     peru: "Peru"
