fix: Update links to new Wikimedia Foundation site
From
https://foundation.wikimedia.org/wiki/Non-wiki_privacy_policy
to https://wikimediafoundation.org/privacy-policy/

From https://blog.wikimedia.org/
to https://wikimediafoundation.org/news/

From https://wikimediafoundation.org/wiki/Vision
to https://wikimediafoundation.org/about/mission/

From ./data/data_jun_2018.ods
to ./data/data_jun_2018.xlsx

Bug: T229175
Change-Id: Ida14e02d3774b24cc1dfc42da6040179c4ececb7

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -30,7 +30,7 @@ en:
     title_two: "Transparency<br> Report"
     lead: "
       <strong><span class='blackout_wrapper'>Imagine a world <span class='blackout'>in which every single human being can</span> free<span class='blackout'>ly share in the sum</span> of <span class='blackout'>all</span> knowledge.</span></strong>
-      <br><br><a target='_blank' href='https://wikimediafoundation.org/wiki/Vision'>Our mission</a> is to provide free access to the sum of all human knowledge. We believe that protecting user privacy and defending against censorship are essential to the success of that mission. Every year, we receive requests from governments, individuals, and organizations to disclose information about users or to delete or alter content on our projects. Some are legitimate. Some are not.
+      <br><br><a target='_blank' href='https://wikimediafoundation.org/about/mission/'>Our mission</a> is to provide free access to the sum of all human knowledge. We believe that protecting user privacy and defending against censorship are essential to the success of that mission. Every year, we receive requests from governments, individuals, and organizations to disclose information about users or to delete or alter content on our projects. Some are legitimate. Some are not.
       <br><br>The purpose of this transparency report is to shed light on the requests we receive and how we respond to them."
     privacy: "Requests for <br>User Data"
     content: "Requests for Content Alteration &amp; Takedown"
