--- a/locales/fr.yml
+++ b/locales/fr.yml
@@ -21,7 +21,7 @@ fr:
   home:
     title: "Rapport de Transparence de la"
     title_two: "Wikimedia Foundation"
-    lead: "<a target='_blank' href='https://wikimediafoundation.org/wiki/Vision'>Notre mission</a> est de fournir un accès libre à l’ensemble des savoirs humains. Nous croyons que la protection de la vie privée des utilisateurs et la protection contre la censure sont déterminantes pour mener à bien cette mission. Chaque année, nous recevons des requêtes de la part d’États, d’individus, d’organisations pour divulguer des informations sur nos utilisateurs ou pour supprimer ou modifier des éléments de contenu dans nos projets. Certaines de ces requêtes sont légitimes. D’autres ne le sont pas.<br><br>Le but de ce rapport de transparence est de mettre en lumière les requêtes que nous recevons et la façon dont nous y répondons."
+    lead: "<a target='_blank' href='https://wikimediafoundation.org/about/mission/'>Notre mission</a> est de fournir un accès libre à l’ensemble des savoirs humains. Nous croyons que la protection de la vie privée des utilisateurs et la protection contre la censure sont déterminantes pour mener à bien cette mission. Chaque année, nous recevons des requêtes de la part d’États, d’individus, d’organisations pour divulguer des informations sur nos utilisateurs ou pour supprimer ou modifier des éléments de contenu dans nos projets. Certaines de ces requêtes sont légitimes. D’autres ne le sont pas.<br><br>Le but de ce rapport de transparence est de mettre en lumière les requêtes que nous recevons et la façon dont nous y répondons."
     privacy: "Requêtes relatives aux<br>Données Utilisateurs"
     content: "Requêtes pour des<br>Modifications et Suppressions"
     faq: "Foire Aux<br>Questions"
